prevent extended ASCII overflows
le toucan has arrived

--- a/pub/style.css
+++ b/pub/style.css
@@ -192,6 +192,10 @@ div.banned {
     background: var(--banned);
 }
 
+div.body {
+    overflow: hidden;
+}
+
 div.media {
     margin: 0 auto;
     width: fit-content;
